feat(jvm): Update JVM note.
- Add JVM parameters about metaspace and permanent generation space.